Acabada la demostració del Teorema de Azrelà-Ascoli

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -240,6 +240,8 @@
 		\subfile{parts/Topologia.tex}
 	\part{Equacions diferencials ordinàries I}
 		\subfile{parts/EDOS1.tex}
+	\newpage
+		\begin{lemma}[Teorema dels coro{\lgem}aris]\begin{proof}\end{proof}\end{lemma}
 \end{document} %WEB TO' MOLONA: http://www-history.mcs.st-and.ac.uk/BiogIndex.html
 
 % Definir commanda per [x] i canviar-les totes. Potser amb paràmetres (per barra, claudators i superíndexos) Potser dues commandes per overline i claudators
