Arreglat uns errors a EDOS I i comentada part de la teoria que estava fora de lloc

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -68,7 +68,7 @@
 \theoremstyle{plain}
 \newtheorem{theorem}{Teorema}[section]
 \newtheorem{proposition}[theorem]{Proposició}
-\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{lemma}[theorem]{Lema}
 \newtheorem{corollary}[theorem]{Coro{\lgem}ari}
 \newtheorem{note}[theorem]{Nota} %Amb la meva veu?
 \newtheorem{observation}[theorem]{Observació} %Per reinterpretacions?
