--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -1694,7 +1694,7 @@
 			Suposem que \(a'\in(a)\). Aleshores tenim que \(a'=a\cdot\beta\) per a cert \(\beta\in D\), i per tant \(a=a\cdot\beta\cdot b\), i per la proposició \myref{prop:podem tatxar pels costats en DI} tenim que \(1=\beta\cdot b\), i per tant \(1\in(b)\), d'on trobem \((b)=R\). Suposem ara que \(b\in I\). Aleshores \((a)=(b)\), i per la definició de \myref{def:ideal maximal} tenim que \(I=(a)\) és un ideal maximal de \(D\).
 		\end{proof}
 	\end{proposition}
-	\subsection{Lemma de Zorn}
+	\subsection{Lema de Zorn}
 	\begin{definition}[Relació d'ordre]
 		\labelname{relació d'ordre}
 		\label{def:relació d'ordre}
@@ -1733,7 +1733,7 @@
 		
 		Si \(a\leq b\) implica \(b=a\) per a tot \(b\in{B}\) direm que \(a\) és maximal per \({B}\).
 	\end{definition}
-	\begin{axiom}[Lemma de Zorn]
+	\begin{axiom}[Lema de Zorn]
 		\label{lemma de Zorn}
 		Sigui \(\mathcal{A}\) amb \(\leq\) una cadena tal que per a tot subconjunt \(\mathcal{C}\subseteq\mathcal{A}\) la cadena \(\mathcal{C}\) té alguna cota superior. Aleshores \(\mathcal{A}\) té algun element maximal.
 	\end{axiom}
@@ -2205,7 +2205,7 @@
 		\[\cont(f(x))\sim1.\]
 		Aleshores direm que \(f(x)\) és un polinomi primitiu.
 	\end{definition}
-	\begin{lemma}[Lemma de Gauss]
+	\begin{lemma}[Lema de Gauss]
 		\labelname{lemma de Gauss}
 		\label{lemma:lemma de Gauss}
 		Siguin \(D\) un domini de factorització única amb la suma \(+\) i el producte \(\cdot\) i \(f(x),g(x)\) dos polinomis primitius de \(D[x]\). Aleshores \(f(x)\cdot g(x)\) és un polinomi primitiu.
