--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -30,7 +30,7 @@
 		\label{prop:les boles són oberts}
 		Siguin \(X\) amb la distància \(\distancia\) un espai mètric i \(\bola(a,r)\) una bola de \(X\). Aleshores \(\bola(a,r)\) és un obert.
 		\begin{proof}
-			Prenem un element \(b\in\bola(a,r)\) i definim
+			Prenem un element \(b\) de \(\bola(a,r)\) i definim
 			\begin{equation}
 			\label{prop:les boles són oberts:eq1}
 				\varepsilon=\frac{r-\distancia(a,b)}{2}.
