--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -229,7 +229,7 @@
 		\[M=\max_{(t,x)\in\Omega}\norm{f(t,x)}.\]
 		Aleshores el problema de Cauchy
 		\[\begin{cases*}
-			\displaystyle\frac{\partial u(x)}{\partial x}=f(t,u(x)) \\
+			\displaystyle\frac{\partial u(t)}{\partial t}=f(t,u(t)) \\
 			\displaystyle u(t_{0})=x_{0}
 		\end{cases*}\]
 		té una única solució sobre l'interval
@@ -238,54 +238,54 @@
 			Denotem \(X=\mathcal{C}_{b}((t_{0}-a,t_{0}+a),\overline{\bola}(x_{0},b))\) i definim una aplicació
 			\begin{align*}
 				T\colon X&\longrightarrow X \\
-				u(x)&\longmapsto x_{0}+\int_{t_{0}}^{t}f(s,u(s))\diff s.
+				u(t)&\longmapsto x_{0}+\int_{t_{0}}^{t}f(s,u(s))\diff s.
 			\end{align*}
-			Observem que una funció \(u(x)\) és solució del problema de Cauchy de l'enunciat si i només si %REVISAR
-			\[T(u(x))=u(x).\]
+			Observem que una funció \(u(t)\) és solució del problema de Cauchy de l'enunciat si i només si %REVISAR
+			\[T(u(t))=u(t).\]
 			
-			Tenim que si \(u(x)\) és un element de \(X\), aleshores \(T(u(x))\) també pertany a \(X\), ja que si prenem un \(t\) de \((t_{0}-a,t_{0}+a)\) trobem que
+			Tenim que si \(u\) és un element de \(X\), aleshores \(T(u)\) també pertany a \(X\), ja que si prenem un \(t\) de \((t_{0}-a,t_{0}+a)\) trobem que
 			\begin{align*}
-				\norm{T(u(x))(t)-x_{0}}&=\norm{x_{0}-x_{0}+\int_{t_{0}}^{t}f(s,u(s))\diff s}\\
+				\norm{T(u(t))-x_{0}}&=\norm{x_{0}-x_{0}+\int_{t_{0}}^{t}f(s,u(s))\diff s}\\
 				&=\norm{\int_{t_{0}}^{t}f(s,u(s))\diff s}\\
 				&\leq\abs{\int_{t_{0}}^{t}\norm{f(s,u(s))}\diff s}\tag{\myref{thm:la norma d'una integral és menos que l'integral de la norma}}\\
 				&\leq M\abs{t-t_{0}}\leq b.
 			\end{align*}
 			i per tant tenim que
-			\[\norm{T(u(x))(t)-x_{0}}\leq b.\]
-			Per la definició de \myref{def:bola} trobem que \(T(u(x))(t)\) és un element de \(\overline{\bola}(x_{0},b)\), i per tant \(T(u(x))\) és un element de \(X\) per a tot \(u(x)\) de \(X\).
+			\[\norm{T(u(t))-x_{0}}\leq b.\]
+			Per la definició de \myref{def:bola} trobem que \(T(u(t))\) és un element de \(\overline{\bola}(x_{0},b)\), i per tant \(T(u)\) és un element de \(X\) per a tot \(u\) de \(X\).
 			
 			Per hipòtesi tenim que \(f\) és Lipschitz respecte la segona variable, i per la definició de \myref{def:funció Lipschitz respecte la segona variable} trobem que existeix un real \(K\geq0\) tal que
 			\begin{equation}
 				\label{thm:Teorema de Picard:eq1}
 				\norm{f(t,x)-f(t,y)}\leq K\norm{x-y}.
 			\end{equation}
-			Volem veure que per a tot \(m\) natural, \(u(x)\) i \(v(x)\) funcions de \(X\) i \(t\) de \((t_{0}-a,t_{0}+a)\) tenim
-			\[\norm{T^{m}(u(x))(t)-T^{m}(v(x))(t)}\leq\frac{K^{m}}{m!}\abs{t-t_{0}}^{m}\distancia(u(x),v(x)).\]
+			Volem veure que per a tot \(m\) natural, \(u\) i \(v\) funcions de \(X\) i \(t\) de \((t_{0}-a,t_{0}+a)\) tenim
+			\[\norm{T^{m}(u(t))-T^{m}(v(t))}\leq\frac{K^{m}}{m!}\abs{t-t_{0}}^{m}\distancia(u,v).\]
 			Ho fem per inducció. Veiem el cas \(m=1\). Tenim
 			\begin{align*}
-				\norm{T(u(x))(t)-T(v(x))(t)}&=\norm{\int_{t_{0}}^{t}{f(s,u(s))}\diff s-\int_{t_{0}}^{t}{f(s,v(s))}\diff s}\\
+				\norm{T(u(t))-T(v(t))}&=\norm{\int_{t_{0}}^{t}{f(s,u(s))}\diff s-\int_{t_{0}}^{t}{f(s,v(s))}\diff s}\\
 				&=\norm{\int_{t_{0}}^{t}\left({f(s,u(s))}-{f(s,v(s))}\right)\diff s}\tag{\ref{prop:propietats basiques multiple integrals Riemann definides}}\\
 				&\leq\abs{\int_{t_{0}}^{t}\norm{f(s,u(s))-f(s,v(s))}\diff s}\tag{\myref{thm:la norma d'una integral és menos que l'integral de la norma}}\\
 				&\leq\abs{\int_{t_{0}}^{t}K\norm{u(s)-v(s)}\diff s}\tag{\ref{thm:Teorema de Picard:eq1}}\\
 				&=K\abs{\int_{t_{0}}^{t}\norm{u(s)-v(s)}\diff s}\tag{\ref{prop:propietats basiques multiple integrals Riemann definides}}\\
-				&\leq K\abs{t-t_{0}}\distancia(u(x),v(x)).
+				&\leq K\abs{t-t_{0}}\distancia(u,v).
 			\end{align*}
 			Suposem ara que l'hipòtesi és certa per a \(m-1\) fix. És a dir, suposem que
 			\begin{equation}
 				\label{thm:Teorema de Picard:eq2}
-				\norm{T^{m-1}(u(x))(t)-T^{m-1}(v(x))(t)}\leq\frac{K^{m-1}}{(m-1)!}\abs{t-t_{0}}^{m-1}\distancia(u(x),v(x))
+				\norm{T^{m-1}(u(t))(t)-T^{m-1}(v)(t)}\leq\frac{K^{m-1}}{(m-1)!}\abs{t-t_{0}}^{m-1}\distancia(u,v)
 			\end{equation}
 			i veiem que també és cert per \(m\). Tenim pel Teorema \myref{thm:la norma d'una integral és menos que l'integral de la norma} que
 			\begin{align*}
-				\norm{T^{m}(u)(t)-T^{m}(v)(t)}&=\norm{\int_{t_{0}}^{t}\left(f(s,T^{m-1}(u)(s))-f(s,T^{m-1}(v)(s))\right)\diff s}\\
-				&\leq\abs{\int_{t_{0}}^{t}\norm{f(s,T^{m-1}(u)(s))-f(s,T^{m-1}(v)(s))}\diff s}\\
-				&\leq\abs{\int_{t_{0}}^{t}K\norm{T^{m-1}(u)(s)-T^{m-1}(v)(s)}\diff s}\tag{\ref{thm:Teorema de Picard:eq1}}\\
-				&\leq\abs{\int_{t_{0}}^{t}\frac{K^{m}}{(m-1)!}\abs{s-t_{0}}^{m-1}\distancia(u(x),v(x))\diff s}\tag{\ref{thm:Teorema de Picard:eq2}}\\
-				&=\frac{K^{m}}{(m-1)!}\distancia(u(x),v(x))\int_{t_{0}}^{t}\abs{s-t_{0}}^{m-1}\diff s\tag{\ref{prop:propietats basiques multiple integrals Riemann definides}}\\
-				&=\frac{K^{m}}{m!}\abs{t-t_{0}}^{m}\distancia(u(x),v(x)).%REF integrar polinomis
+				\norm{T^{m}(u(t))-T^{m}(v(t))}&=\norm{\int_{t_{0}}^{t}\left(f(s,T^{m-1}(u(s)))-f(s,T^{m-1}(v(s)))\right)\diff s}\\
+				&\leq\abs{\int_{t_{0}}^{t}\norm{f(s,T^{m-1}(u(s)))-f(s,T^{m-1}(v(s)))}\diff s}\\
+				&\leq\abs{\int_{t_{0}}^{t}K\norm{T^{m-1}(u(s))-T^{m-1}(v(s))}\diff s}\tag{\ref{thm:Teorema de Picard:eq1}}\\
+				&\leq\abs{\int_{t_{0}}^{t}\frac{K^{m}}{(m-1)!}\abs{s-t_{0}}^{m-1}\distancia(u,v)\diff s}\tag{\ref{thm:Teorema de Picard:eq2}}\\
+				&=\frac{K^{m}}{(m-1)!}\distancia(u,v)\int_{t_{0}}^{t}\abs{s-t_{0}}^{m-1}\diff s\tag{\ref{prop:propietats basiques multiple integrals Riemann definides}}\\
+				&=\frac{K^{m}}{m!}\abs{t-t_{0}}^{m}\distancia(u,v).%REF integrar polinomis
 			\end{align*}
-			Per tant, pel \myref{thm:principi d'inducció} tenim que per a tot \(m\) natural, \(u(x)\) i \(v(x)\) funcions de \(X\) i \(t\) de \((t_{0}-a,t_{0}+a)\) es satisfà
-			\[\norm{T^{m}(u(x))(t)-T^{m}(v(x))(t)}\leq\frac{K^{m}}{m!}\abs{t-t_{0}}^{m}\distancia(u(x),v(x)),\]
+			Per tant, pel \myref{thm:principi d'inducció} tenim que per a tot \(m\) natural, \(u\) i \(v\) funcions de \(X\) i \(t\) de \((t_{0}-a,t_{0}+a)\) es satisfà
+			\[\norm{T^{m}(u(t))-T^{m}(v(t))}\leq\frac{K^{m}}{m!}\abs{t-t_{0}}^{m}\distancia(u,v),\]
 			com volíem veure.
 			
 			Ara bé, tenim que
@@ -293,15 +293,15 @@
 			i per la definició de \myref{def:límit} tenim que existeix un natural \(n_{0}\) tal que per a tot \(n>n_{0}\) es satisfà
 			\[0<{\frac{K^{m}}{m!}\abs{t-t_{0}}^{m}}<1.\]
 			
-			Per tant, per la definició d'\myref{def:aplicació contractiva} tenim que per a tot \(n>n_{0}\) l'aplicació \(T^{n}\) és una aplicació contractiva, i pel coro{\lgem}ari \myref{cor:si una funció té una potència contractiva aleshores aquesta té un únic punt fix} tenim que existeix una única funció \(u(x)\) tal que
-			\[T(u(x))=u(x).\qedhere\]
+			Per tant, per la definició d'\myref{def:aplicació contractiva} tenim que per a tot \(n>n_{0}\) l'aplicació \(T^{n}\) és una aplicació contractiva, i pel coro{\lgem}ari \myref{cor:si una funció té una potència contractiva aleshores aquesta té un únic punt fix} tenim que existeix una única funció \(u\) de \(X\) tal que
+			\[T(u(t))=u(t).\qedhere\]
 		\end{proof}
 	\end{theorem}
 	\begin{corollary}
 		\label{cor:Teorema de Picard}
 		Siguin \(I=[a,b]\) un interval de \(\mathbb{R}\), \(\Omega=I\times\mathbb{R}^{n}\) un conjunt, \((t_{0},x_{0})\) un element de \(\Omega\) i \(f\colon\Omega\longrightarrow\mathbb{R}^{n}\) una funció contínua i Lipschitz respecte la segona variable. Aleshores el problema de Cauchy
 		\[\begin{cases*}
-			\displaystyle \frac{\partial u(x)}{\partial x}=f(t,u(x)) \\
+			\displaystyle \frac{\partial u(t)}{\partial t}=f(t,u(t)) \\
 			\displaystyle u(t_{0})=x_{0}.
 		\end{cases*}\]
 		té una única solució definida en l'interval \(I\).
@@ -388,7 +388,7 @@
 		\labelname{Teorema de Peano}\label{thm:Teorema de Peano}
 		Siguin \(a\), \(b\) i \(t_{0}\) dos reals, \(x_{0}\) un punt de \(\mathbb{R}^{n}\), \(\Omega=[t_{0}-a,t_{0}+a]\times\overline{\bola}(x_{0},b)\) un conjunt, \(f\colon\Omega\longrightarrow\mathbb{R}^{n}\) una funció contínua i \(M\) un real tal que \(\norm{f(t,x)}<M\) per a tot \((t,x)\) de \(\Omega\). Aleshores el problema de Cauchy
 		\[\begin{cases*}
-			\displaystyle\frac{\partial u(x)}{\partial x}=f(t,u(x)) \\
+			\displaystyle\frac{\partial u(t)}{\partial t}=f(t,u(t)) \\
 			\displaystyle u(t_{0})=x_{0}
 		\end{cases*}\]
 		té una única solució sobre l'interval
@@ -400,11 +400,11 @@
 	\begin{corollary}
 		Siguin \(\Omega\subset\mathbb{R}\times\mathbb{R}^{n}\) un obert, \(f\colon\Omega\longrightarrow\mathbb{R}^{n}\) una funció contínua i \(K\) un compacte de \(\Omega\). Aleshores existeix un real \(\alpha>0\) tal que per a tot punt \((t_{0},x_{0})\) de \(K\) el problema
 		\[\begin{cases*}
-			\displaystyle \frac{\partial u(x)}{\partial x}=f(t,u(x)) \\
+			\displaystyle \frac{\partial u(t)}{\partial t}=f(t,u(t)) \\
 			\displaystyle x(t_{0})=x_{0}
 		\end{cases*}\]
 		té solució sobre l'interval
-		\[\left[t_{0}-a,t_{0}+a\right].\]
+		\[\left[t_{0}-\alpha,t_{0}+\alpha\right].\]
 		\begin{proof}
 			%TODO
 		\end{proof}
@@ -421,22 +421,22 @@
 		\labelname{equació diferencial ordinària d'odre \ensuremath{n}}\label{def:equació diferencial ordinària d'ordre n}
 		\labelname{solució de l'equació diferencial ordinària}\label{def:solució de l'equació diferencial ordinària}
 		Siguin \(\Omega=\mathbb{R}\times\mathbb{R}^{n}\) un conjunt i \(F\colon\Omega\longrightarrow\mathbb{R}^{m}\), \(u\colon\mathbb{R}\longrightarrow\mathbb{R}^{m}\) dues funcions tals que
-		\[\frac{\partial^{n}u(x)}{\partial x^{n}}=F\left(t,u(x),\frac{\partial u(x)}{\partial x},\dots,\frac{\partial^{n-1}u(x)}{\partial x^{n-1}}\right).\]
+		\[\frac{\partial^{n}u(t)}{\partial x^{n}}=F\left(t,u(t),\frac{\partial u(t)}{\partial t},\dots,\frac{\partial^{n-1}u(t)}{\partial x^{n-1}}\right).\]
 		Aleshores direm que
-		és una equació diferencial ordinària. També direm que \(t\) és la variable temporal, \(u(x)\) la variable espacial.
+		és una equació diferencial ordinària. També direm que \(t\) és la variable temporal, \(u(t)\) la variable espacial.
 	\end{definition}
 	\begin{proposition}
 		\label{prop:edos1:1}
 		Siguin \(I\) un interval tancat i acotat de \(\mathbb{R}\) i \(f\colon I\longrightarrow\mathbb{R}^{m}\) una funció contínua. Aleshores l'equació diferencial ordinària d'ordre \(1\)
 		\begin{equation}
 			\label{edos1:prop1:eq1}
-			\frac{\partial u(x)}{\partial x}=f(u(x)).
+			\frac{\partial u(t)}{\partial t}=f(u(t)).
 		\end{equation}
 		té una única solució de la forma
-		\[u(x)=\int_{x_{0}}^{x}f(u(t))\diff t.\]
+		\[u(t)=\int_{x_{0}}^{x}f(u(t))\diff t.\]
 		\begin{proof}
 			Observem primer que pel \myref{thm:Weierstrass màxims i mínims múltiples variables} la funció \(f(x)\) està acotada en \(I\), i pel Teorema \myref{thm:Contínua + acotada implica integrable Riemann} tenim que la funció \(f(x)\) és integrable Riemann, i per tant, pel \myref{thm:Teorema Fonamental del Càlcul}, trobem que per a tot \(x_{0}\) de \(I\)
-			\[u(x)=\int_{x_{0}}^{x}f(u(t))\diff t\]
+			\[u(t)=\int_{x_{0}}^{x}f(u(t))\diff t\]
 			és una solució de l'equació diferencial ordinària \eqref{edos1:prop1:eq1}.
 			
 			Aquesta demostració també ens serveix per veure la unicitat.
@@ -451,7 +451,7 @@
 		\begin{equation}
 			\label{prop:problema de Cauchy:eq1}
 			\begin{cases}
-				\displaystyle \frac{\partial u(x)}{\partial x}=f(x) \\
+				\displaystyle \frac{\partial u(t)}{\partial t}=f(x) \\
 				\displaystyle u(t_{0})=x_{0}
 			\end{cases}
 		\end{equation}
@@ -461,7 +461,7 @@
 		\[F(x)=\int_{x_{0}}^{x}\frac{\diff t}{f(t)}.\]
 		\begin{proof}
 			Observem que, per la definició de \myref{def:equació diferencial ordinària d'ordre n} l'equació
-			\[\frac{\partial u(x)}{\partial x}=f(x)\]
+			\[\frac{\partial u(t)}{\partial t}=f(x)\]
 			és una equació ordinària d'orde \(1\).
 			
 			Com que, per hipòtesi, tenim \(f(x)\neq0\) per a tot \(x\) de \((a,b)\) trobem que la funció \(\frac{1}{f(x)}\) és derivable %REF
@@ -477,16 +477,16 @@
 			Ara bé, tenim que
 			\begin{equation}
 				\label{prop:problema de Cauchy:eq3}
-				\frac{\partial F(u(x))}{\partial x}=1,
+				\frac{\partial F(u(t))}{\partial x}=1,
 			\end{equation}
 			ja que
 			\begin{align*}
-				\frac{\partial F(u(x))}{\partial x}&=\frac{\partial F(u(x))}{\partial u(x)}\frac{\partial u(x)}{\partial x}\tag{\myref{thm:regla de la cadena}}\\
-				&=\frac{1}{f(u(x))}\frac{\partial u(x)}{\partial x}\tag{\ref{prop:problema de Cauchy:eq2}}\\
-				&=\frac{1}{f(u(x))}f(u(x))=1.\tag{\ref{prop:problema de Cauchy:eq1}}\\
+				\frac{\partial F(u(t))}{\partial x}&=\frac{\partial F(u(t))}{\partial u(t)}\frac{\partial u(t)}{\partial t}\tag{\myref{thm:regla de la cadena}}\\
+				&=\frac{1}{f(u(t))}\frac{\partial u(t)}{\partial t}\tag{\ref{prop:problema de Cauchy:eq2}}\\
+				&=\frac{1}{f(u(t))}f(u(t))=1.\tag{\ref{prop:problema de Cauchy:eq1}}\\
 			\end{align*}
 			I per tant, pel \myref{thm:Teorema Fonamental del Càlcul} trobem que
-			\[\int_{t_{0}}^{t}\frac{\partial F(u(x))}{\partial x}\diff x=F(u(t))-F(u(t_{0})),\]
+			\[\int_{t_{0}}^{t}\frac{\partial F(u(t))}{\partial x}\diff x=F(u(t))-F(u(t_{0})),\]
 			i per \eqref{prop:problema de Cauchy:eq2} trobem \(F(u(t))-F(u(t_{0}))=t-t_{0}\)
 			
 			Ara bé, per hipòtesi, tenim que \(u(t_{0})=x_{0}\), i trobem
@@ -506,20 +506,20 @@
 		\begin{equation}
 			\label{ex:edos problema de Cauchy 1:eq1}
 			\begin{cases*}
-				\frac{\partial u(x)}{\partial x}=\alpha x^{2} \\
+				\frac{\partial u(t)}{\partial t}=\alpha x^{2} \\
 				u(1)=1.
 			\end{cases*}
 		\end{equation}
 		\begin{solution}
-			Observem que, per la definició de \myref{def:equació diferencial ordinària d'ordre n} que l'equació \(\frac{\partial u(x)}{\partial x}=\alpha x^{2}\) és una equació diferencial ordinària d'odre \(1\). Per la proposició \myref{prop:problema de Cauchy} trobem que les solucions de \eqref{ex:edos problema de Cauchy 1:eq1} són de la forma
-			\[u(x)=F^{-1}(x-1)\]
+			Observem que, per la definició de \myref{def:equació diferencial ordinària d'ordre n} que l'equació \(\frac{\partial u(t)}{\partial t}=\alpha x^{2}\) és una equació diferencial ordinària d'odre \(1\). Per la proposició \myref{prop:problema de Cauchy} trobem que les solucions de \eqref{ex:edos problema de Cauchy 1:eq1} són de la forma
+			\[u(t)=F^{-1}(x-1)\]
 			on
 			\[F(x)=\int_{x_{0}}^{x}\frac{\diff t}{\alpha t^{2}}.\]
 			
 			Per tant, tenim que
 			\[F(x)=\frac{x-1}{\alpha x}\]
 			i trobem
-			\[u(x)=\frac{1}{1-\alpha (x-1)}.\qedhere\]
+			\[u(t)=\frac{1}{1-\alpha (x-1)}.\qedhere\]
 		\end{solution}
 	\end{example}
 	\begin{proposition}[Equacions de variables separades]
@@ -527,28 +527,28 @@
 		Siguin \((a,b)\) i \((t_{1},t_{2})\) dos intervals oberts de \(\mathbb{R}\), \(f\colon(a,b)\longrightarrow\mathbb{R}\) i \(g\colon(t_{1},t_{2})\longrightarrow\mathbb{R}\) dues funcions contínues amb \(f(x)\neq0\) per a tot \(x\) de \((a,b)\), \(x_{0}\) un element de \((a,b)\) i \(t_{0}\) un element de \((t_{1},t_{2})\). Aleshores el problema de Cauchy
 		\begin{equation}
 			\begin{cases}
-				\displaystyle \frac{\partial u(x)}{\partial x}=g(x)f(u(x)) \\
+				\displaystyle \frac{\partial u(t)}{\partial t}=g(x)f(u(t)) \\
 				\displaystyle u(t_{0})=x_{0}.
 			\end{cases}
 		\end{equation}
 		té una única solució de la forma
-		\[u(x)=F^{-1}\left(\int_{t_{0}}^{x}g(t)\diff t\right)\]
+		\[u(t)=F^{-1}\left(\int_{t_{0}}^{x}g(t)\diff t\right)\]
 		on
 		\[F(x)=\int_{x_{0}}^{x}\frac{\diff t}{f(t)}.\]
 		\begin{proof}
-			Com que, per hipòtesi, \(f(x)\neq0\) per a tot \(x\) de \((a,b)\) definim \(h=\frac{1}{f(u(x))}\) i observem que
-			\[h(u(x))\frac{\partial u(x)}{\partial x}=g(x)\]
+			Com que, per hipòtesi, \(f(x)\neq0\) per a tot \(x\) de \((a,b)\) definim \(h=\frac{1}{f(u(t))}\) i observem que
+			\[h(u(t))\frac{\partial u(t)}{\partial t}=g(x)\]
 			i per tant
-			\[\int h(u(x))\frac{\partial u(x)}{\partial x}\diff {x}=\int g(x)\diff x.\]
+			\[\int h(u(t))\frac{\partial u(t)}{\partial t}\diff {x}=\int g(x)\diff x.\]
 			
 			Ara bé, per la \myref{thm:regla de la cadena} i el \myref{thm:Teorema Fonamental del Càlcul} tenim que això és
 			\[H(x)=G(x)+C\]
 			on \(C\) és un real i
 			\[H(x)=\int_{t_{0}}^{x}h(t)\diff t\quad\text{i}\quad G(x)=\int_{t_{0}}^{x}g(t)\diff t\]
 			i per tant
-			\[H(u(x))=G(x)+C\]
+			\[H(u(t))=G(x)+C\]
 %			Podem seguir la solució de la proposició \myref{prop:problema de Cauchy} per trobar que les úniques solucions són
-%			\[u(x)=F^{-1}\left(\int_{t_{0}}^{x}g(t)\diff t\right)\]
+%			\[u(t)=F^{-1}\left(\int_{t_{0}}^{x}g(t)\diff t\right)\]
 %			on
 %			\[F(x)=\int_{x_{0}}^{x}\frac{\diff t}{f(t)}.\qedhere\]
 		\end{proof}
@@ -559,18 +559,18 @@
 		\begin{equation}
 			\label{ex:equacions de variables separades:eq1}
 			\begin{cases*}
-				\displaystyle \frac{\partial u(x)}{\partial x}=\frac{u(x)^{3}x}{\sqrt{1+x^{2}}} \\
+				\displaystyle \frac{\partial u(t)}{\partial t}=\frac{u(t)^{3}x}{\sqrt{1+x^{2}}} \\
 				u(0)=1.
 			\end{cases*}
 		\end{equation}
 		\begin{solution}
 			Definim
-			\[f(u(x))=u(x)^{-3}\quad\text{i}\quad g(x)=\frac{x}{\sqrt{1+x^{2}}}.\]
+			\[f(u(t))=u(t)^{-3}\quad\text{i}\quad g(x)=\frac{x}{\sqrt{1+x^{2}}}.\]
 			Per tant tenim que
-			\[f(u(x))\frac{\partial u(x)}{\partial x}=g(x)\]
+			\[f(u(t))\frac{\partial u(t)}{\partial t}=g(x)\]
 			
 			Observem que
-			\[u(x)=\int_{x_{0}}^{x}\frac{yu(x)}{\sqrt{1+y^{2}}}\diff x\]
+			\[u(t)=\int_{x_{0}}^{x}\frac{yu(t)}{\sqrt{1+y^{2}}}\diff x\]
 			Per la proposició \myref{prop:equacions de variables separades} tenim que les solucions al sistema \eqref{ex:equacions de variables separades:eq1} són de la forma
 			\[u(t)=F^{-1}\left(\int_{t_{0}}^ {t}\frac{y}{\sqrt{1+y^{2}}}\diff y\right)\]
 			on
@@ -585,22 +585,22 @@
 		\begin{equation}
 			\label{prop:equacions diferencials lineals:eq1}
 			\begin{cases}
-				\displaystyle \frac{\partial u(x)}{\partial x}=a(t)u(x)+b(t)\\
+				\displaystyle \frac{\partial u(t)}{\partial t}=a(t)u(t)+b(t)\\
 				\displaystyle u(t_{0})=x_{0}.
 			\end{cases}
 		\end{equation}
 		té una única solució de la forma
-		\[u(x)=\left(x_{0}+\int_{t_{0}}^{t}b(s)e^{-\int_{t_{0}}^{s}a(\tau)\diff \tau}\diff s\right)e^{\int_{t_{0}}^{x}a(s)\diff s}.\]
+		\[u(t)=\left(x_{0}+\int_{t_{0}}^{t}b(s)e^{-\int_{t_{0}}^{s}a(\tau)\diff \tau}\diff s\right)e^{\int_{t_{0}}^{x}a(s)\diff s}.\]
 		\begin{proof}
 			Considerem el canvi de variable
 			\begin{equation}
 				\label{prop:equacions diferencials lineals:eq2}
-				u(x)=c(x)e^{\int_{t_{0}}^{x}a(s)\diff s}.
+				u(t)=c(x)e^{\int_{t_{0}}^{x}a(s)\diff s}.
 			\end{equation}
 			Aleshores pel \myref{thm:Teorema Fonamental del Càlcul} tenim %I ref de la derivada del producte
-			\[\frac{\partial u(x)}{\partial x}=\frac{\partial c(x)}{\partial x}e^{\int_{t_{0}}^{x}a(s)\diff s}+c(x)a(x)e^{\int_{t_{0}}^{x}a(s)\diff s}\]
+			\[\frac{\partial u(t)}{\partial t}=\frac{\partial c(x)}{\partial x}e^{\int_{t_{0}}^{x}a(s)\diff s}+c(x)a(x)e^{\int_{t_{0}}^{x}a(s)\diff s}\]
 			i per \eqref{prop:equacions diferencials lineals:eq1} i \eqref{prop:equacions diferencials lineals:eq2} tenim
-			\[a(t)u(x)+b(t)=\frac{\partial c(x)}{\partial x}e^{\int_{t_{0}}^{x}a(s)\diff s}+a(x)u(x).\]
+			\[a(t)u(t)+b(t)=\frac{\partial c(x)}{\partial x}e^{\int_{t_{0}}^{x}a(s)\diff s}+a(x)u(t).\]
 			Per tant trobem
 			\[\frac{\partial c(x)}{\partial x}=b(x)e^{\int_{t_{0}}^{x}a(s)\diff s}\]
 			i tenim
@@ -615,7 +615,7 @@
 			Aleshores per la proposició \myref{prop:problema de Cauchy} trobem que aquest problema té una única solució, i és de la forma
 			\[c(t)=x_{0}+\int_{t_{0}}^{t}b(s)e^{-\int_{t_{0}}^{s}a(\tau)\diff \tau}\diff s\]
 			i desfent el canvi de variables \eqref{prop:equacions diferencials lineals:eq2} trobem que les solucions són de la forma
-			\[u(x)=\left(x_{0}+\int_{t_{0}}^{t}b(s)e^{-\int_{t_{0}}^{s}a(\tau)\diff \tau}\diff s\right)e^{\int_{t_{0}}^{x}a(s)\diff s}.\qedhere\]
+			\[u(t)=\left(x_{0}+\int_{t_{0}}^{t}b(s)e^{-\int_{t_{0}}^{s}a(\tau)\diff \tau}\diff s\right)e^{\int_{t_{0}}^{x}a(s)\diff s}.\qedhere\]
 		\end{proof}
 	\end{proposition}
 	\end{comment}
