Arreglat un error en l'enunciat del Teorema de Peano

--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -391,7 +391,7 @@
 			\displaystyle\frac{\partial u(t)}{\partial t}=f(t,u(t)) \\
 			\displaystyle u(t_{0})=x_{0}
 		\end{cases*}\]
-		té una única solució sobre l'interval
+		té una solució sobre l'interval
 		\[\left[t_{0}-\min\left\{a,\frac{b}{M}\right\},t_{0}+\min\left\{a,\frac{b}{M}\right\}\right].\]
 		\begin{proof}
 			% https://arxiv.org/pdf/1202.1152.pdf
