Afegida teoria a topologia i començat un exemple a la secció d'aplicacions contínues

--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -225,7 +225,7 @@
 	\end{definition}
 	\begin{theorem}[Teorema de Picard]
 		\labelname{Teorema de Picard}\label{thm:Teorema de Picard}
-		Siguin \(a\), \(b\) i \(t_{0}\) dos reals, \(x_{0}\) un punt de \(\mathbb{R}^{n}\), \(\Omega=[t_{0}-a,t_{0}+a]\times\overline{\bola}(x_{0},b)\) un conjunt, \(f\colon\Omega\longrightarrow\mathbb{R}^{n}\) una funció contínua i Lipschitz respecte la segona variable i
+		Siguin \(a\), \(b\) i \(t_{0}\) tres reals, \(x_{0}\) un punt de \(\mathbb{R}^{n}\), \(\Omega=[t_{0}-a,t_{0}+a]\times\overline{\bola}(x_{0},b)\) un conjunt, \(f\colon\Omega\longrightarrow\mathbb{R}^{n}\) una funció contínua i Lipschitz respecte la segona variable i
 		\[M=\max_{(t,x)\in\Omega}\norm{f(t,x)}.\]
 		Aleshores el problema de Cauchy
 		\[\begin{cases*}
