--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -518,10 +518,6 @@
 		\end{enumerate}
 		Aleshores direm que \(\mathbb{N}\) és el conjunt dels nombres naturals, i anomenarem els elements de \(\mathbb{N}\) nombres naturals.
 	\end{definition}
-	\begin{notation}
-		Denotarem \(S(1)=2\), \(S(2)=3\), \(S(3)=4\), etc. Per tant
-		\[\mathbb{N}=\{1,2,3,4\dots\}\]
-	\end{notation}
 	\begin{lemma}
 		\label{lemma:primer element}
 		\(\mathbb{N}=\{1,S(1),S(S(1)),S(S(S(1))),\dots\}\).
@@ -532,7 +528,12 @@
 		\end{proof}
 	\end{lemma}
 	\begin{notation}
-		Denotarem l'acció d'aplicar l'aplicació \(S\) a l'element \(1\) un nombre natural \(k\) de vegades com \(S^{k}(1)\).
+		Denotarem \(S(1)=2\), \(S(2)=3\), \(S(3)=4\), etc. Per tant
+		\[\mathbb{N}=\{1,2,3,4\dots\}.\]
+		Això té sentit pel lema \myref{lemma:primer element}.
+	\end{notation}
+	\begin{notation}
+		Denotarem l'acció d'aplicar l'aplicació \(S\) al nombre natural \(n\) un nombre natural \(k\) de vegades com \(S^{k}(n)\).
 	\end{notation}
 	\begin{theorem}[Teorema del primer element]
 		\labelname{Teorema del primer element}\label{thm:primer element}
